--- a/docs/locales/de/translation.json
+++ b/docs/locales/de/translation.json
@@ -40,7 +40,10 @@
     },
     "photocalculatorsubheading": "Klicken Sie auf die Sterne, um Fotos zu sammeln",
     "random": "Willkürlich",
-    "resetapp": "App zurücksetzen"
+    "resetapp": "App zurücksetzen",
+    "secondaryevidence": "Sekundäre Beweise",
+    "uniquestrengths": "Einzigartige Stärken",
+    "weaknesses": "Schwächen"
   },
   "phasmo": {
     "evidence": {
@@ -73,23 +76,155 @@
         "short": "Geisterkiste"
       }
     },
+    "secondaryEvidence": {
+      "banshee1": "Kann über 65% der durchschnittlichen geistigen Gesundheit jagen",
+      "demon1": "Kann bis zu 80% durchschnittliche geistige Gesundheit jagen.",
+      "demon2": "Erfolgreiche Ouija-Board-Fragen mindern nicht die geistige Gesundheit.",
+      "goryo1": "Wird nur auf DOTS durch die Nachtsichtkamera angezeigt.",
+      "jinn1": "Bewegt sich schneller mit eingeschaltetem Unterbrecher.",
+      "jinn2": "Bewegt normale Geschwindigkeit bei ausgeschaltetem Schalter.",
+      "mare1":  "Kann im Dunkeln bis zu 60% durchschnittliche geistige Gesundheit jagen.",
+      "mare2": "Kann nicht bis zu 40% durchschnittliche geistige Gesundheit im Licht jagen.",
+      "mare3": "Schaltet weder Licht noch Unterbrecher ein.",
+      "myling1": "Macht paranormale Geräusche, die durch Paramic häufiger gehört werden als andere Geister.",
+      "oni1": "Kann Gegenstände mit hoher Geschwindigkeit und großer Entfernung werfen.",
+      "phantom1": "Verschwindet, wenn das Foto außerhalb einer Jagd aufgenommen wird, manifestiert sich jedoch weiterhin.",
+      "phantom2": "Blinkt während der Jagd ungefähr doppelt so langsam wie andere Geister.",
+      "poltergeist1": "Kann mehrere Gegenstände gleichzeitig werfen.",
+      "revenant1": "Bewegt sich sehr schnell, während es während der Jagd eine Sichtlinie auf den Spieler hat.",
+      "revenant2": "Bewegt sich während der Jagd sehr langsam, wenn kein Spieler anvisiert wird.",
+      "spirit1": "Verschmieren verhindert eine Jagd für 180 Sekunden (3 Minuten) statt 90 Sekunden wie bei normalen Geistern.",
+      "wraith1": "Kann nach dem Betreten von Salz Schrittgeräusche machen, hinterlässt jedoch keine leuchtenden Fußabdrücke."
+    },
     "ghosts": {
-      "banshee": "Banshee",
-      "demon": "Demon",
-      "goryo": "Goryo",
-      "hantu": "Hantu",
-      "jinn": "Jinn",
-      "mare": "Mare",
-      "myling": "Myling",
-      "oni": "Oni",
-      "phantom": "Phantom",
-      "poltergeist": "Poltergeist",
-      "revenant": "Revenant",
-      "shade": "Shade",
-      "spirit": "Spirit",
-      "wraith": "Wraith",
-      "yokai": "Yokai",
-      "yurei": "Yurei"
+      "banshee": {
+        "id": "banshee",
+        "name": "Banshee",
+        "description": "A Banshee is a natural hunter and will attack anything. It has been known to stalk its prey one at a time until making its kill.",
+        "evidence": ["ghostorbs", "fingerprints", "dotsprojector"],
+        "strengths": "A Banshee will only target one person at a time.",
+        "weaknesses": "Banshees fear the Crucifix and will be less aggressive when near one."
+      },
+      "demon": {
+        "id": "demon",
+        "name": "Demon",
+        "evidence": ["ghostwriting", "freezingtemperatures", "fingerprints"],
+        "description": "A Demon is one of the worst Ghosts you can encounter. It has been known to attack without a reason.",
+        "strengths": "Demons will attack more often than any other Ghost.",
+        "weaknesses": "Asking a Demon successful questions on the Ouija Board won't lower the user's sanity."
+      },
+      "goryo": {
+        "id": "goryo",
+        "name": "Goryo",
+        "evidence": ["emflevel5", "fingerprints", "dotsprojector"],
+        "description": "Using a video camera is the only way to view a Goryo, when it passes through a DOTS projector.",
+        "strengths": "A Goryo will usually only show itself on camera if there are no people nearby.",
+        "weaknesses": "They are rarely seen far from their place of death."
+      },
+      "hantu": {
+        "id": "hantu",
+        "name": "Hantu",
+        "evidence": ["fingerprints", "ghostorbs", "freezingtemperatures"],
+        "description": "A Hantu is a rare ghost that can be found in hot climates. They are known to attack often during cold weather.",
+        "strengths": "Moves faster in colder areas.",
+        "weaknesses": "Moves slower in warmer areas."
+      },
+      "jinn": {
+        "id": "jinn",
+        "name": "Jinn",
+        "evidence": ["emflevel5", "freezingtemperatures", "fingerprints"],
+        "description": "A Jinn is a territorial ghost that will attack when threatened. It has also been known to be able to travel at significant speed.",
+        "strengths": " A Jinn will travel at a faster speed if its victim is far away.",
+        "weaknesses": "Turning off the locations power source will prevent the Jinn from using its ability."
+      },
+      "mare": {
+        "id": "mare",
+        "name": "Mare",
+        "evidence": ["ghostwriting", "ghostorbs", "spiritbox"],
+        "description": "A Mare is the source of all nightmares, making it most powerful in the dark.",
+        "strengths": "A Mare will have an increased chance to attack in the dark.",
+        "weaknesses": "Turning the lights on around the Mare will lower its chance to attack."
+      },
+      "myling": {
+        "id": "myling",
+        "name": "Myling",
+        "evidence": ["emflevel5", "fingerprints", "ghostwriting"],
+        "description": "A Myling is a very vocal and active ghost. They are rumoured to be quiet when hunting their prey.",
+        "strengths": "A Myling is known to be quieter when hunting.",
+        "weaknesses": "Mylings more frequently make paranormal sounds."
+      },
+      "oni": {
+        "id": "oni",
+        "name": "Oni",
+        "evidence": ["emflevel5", "freezingtemperatures", "dotsprojector"],
+        "description": "Oni's are a cousin to the Demon and possess extreme strength. There have been rumours that they become more active around their prey.",
+        "strengths": "Oni's are more active when people are nearby and have been seen moving objects at great speed.",
+        "weaknesses": "Being more active make the Oni easier to find and identify"
+      },
+      "phantom": {
+        "id": "phantom",
+        "name": "Phantom",
+        "evidence": ["spiritbox", "fingerprints", "dotsprojector"],
+        "description": "A Phantom is a ghost that can possess the living, most commonly summoned by a Ouija Board. It also induces fear into those around it.",
+        "strengths": "Looking at a Phantom will considerably drop your sanity.",
+        "weaknesses": "Taking a photo of the Phantom will make it temporarily disappear."
+      },
+      "poltergeist": {
+        "id": "poltergeist",
+        "name": "Poltergeist",
+        "evidence": ["ghostwriting", "spiritbox", "fingerprints"],
+        "description": "One of the most famous Ghosts, a Poltergeist, also known as a noisy ghost can manipulate objects around it to spread fear into its victims.",
+        "strengths": "A Poltergeist can throw huge amounts of objects at once.",
+        "weaknesses": "A Poltergeist is almost ineffective in an empty room."
+      },
+      "revenant": {
+        "id": "revenant",
+        "name": "Revenant",
+        "evidence": ["ghostorbs", "ghostwriting", "freezingtemperatures"],
+        "description": "A Revenant is a slow but violent ghost that will attack indiscriminately. It has been rumoured to travel at a significantly high speed when hunting.",
+        "strengths": "A Revenant will travel at a significantly faster speed when hunting a victim.",
+        "weaknesses": "Hiding from the Revenant will cause it to move very slowly."
+      },
+      "shade": {
+        "id": "shade",
+        "name": "Shade",
+        "evidence": ["emflevel5", "freezingtemperatures", "ghostwriting"],
+        "description": "A Shade is known to be a Shy Ghost. There is evidence that a Shade will stop all paranormal activity if there are multiple people nearby.",
+        "strengths": "Being shy means the Ghost will be harder to find.",
+        "weaknesses": "The Ghost will not enter hunting mode if there is multiple people nearby."
+      },
+      "spirit": {
+        "id": "spirit",
+        "name": "Spirit",
+        "evidence": ["emflevel5", "ghostwriting", "spiritbox"],
+        "description": "A Spirit is the most common Ghost you will come across however it is still very powerful and dangerous. They are usually discovered at one of their hunting grounds after an unexplained death.",
+        "strengths": "Nothing.",
+        "weaknesses": "Using Smudge Sticks on a spirit will stop it attacking for a long period of time."
+      },
+      "wraith": {
+        "id": "wraith",
+        "name": "Wraith",
+        "evidence": ["emflevel5", "dotsprojector", "spiritbox"],
+        "description": "A wraith is one of the most dangerous ghosts you will find. It is also the only known Ghost that has the ability of flight and has sometimes been known to travel through walls.",
+        "strengths": "Wraiths almost never touch the ground meaning it can't be tracked by footsteps.",
+        "weaknesses": "Wraiths have a toxic reaction to Salt."
+      },
+      "yokai": {
+        "id": "yokai",
+        "name": "Yokai",
+        "evidence": ["ghostorbs", "dotsprojector", "spiritbox"],
+        "description": "A Yokai is a common type of ghost that is attracted to human voices. They can usually be found haunting family homes.",
+        "strengths": "Talking near a Yokai will anger it and increase it's chance of attacking.",
+        "weaknesses": "When hunting a Yokai can only hear voices close to it."
+      },
+      "yurei": {
+        "id": "yurei",
+        "name": "Yurei",
+        "evidence": ["freezingtemperatures", "ghostorbs", "dotsprojector"],
+        "description": "A Yurei is a Ghost that has returned to the physical world, usually for the purpose of revenge or hatred.",
+        "strengths": "Yurei's have been known to have a stronger effect on people sanity.",
+        "weaknesses": "Smudging the Yurei's room will cause it to not wander around the location for a long time."
+      }
     }
   }
 }
