--- a/docs/locales/fr/translation.json
+++ b/docs/locales/fr/translation.json
@@ -40,7 +40,10 @@
     },
     "photocalculatorsubheading": "Cliquez sur les étoiles pour collecter des photos",
     "random": "Aléatoire",
-    "resetapp": "Réinitialiser App"
+    "resetapp": "Réinitialiser App",
+    "secondaryevidence": "Preuve Secondaire",
+    "uniquestrengths": "Forces Uniques",
+    "weaknesses": "Faiblesses"
   },
   "phasmo": {
     "evidence": {
@@ -73,23 +76,156 @@
         "short": "Spirit Box"
       }
     },
+    "secondaryEvidence": {
+      "banshee1": "Peut chasser au-dessus de 65% de santé mentale moyenne.",
+      "demon1": "Peut chasser jusqu'à 80% de Santé Mentale Moyenne.",
+      "demon2": "Les questions réussies de la planche Ouija ne diminuent pas la raison.",
+      "goryo1": "N'apparaît que sur DOTS via une caméra de vision nocturne.",
+      "jinn1": "Se déplace plus rapidement avec le disjoncteur activé.",
+      "jinn2": "Déplace la vitesse normale avec le disjoncteur éteint.",
+      "mare1": "Peut chasser jusqu'à 60% de Santé Mentale Moyenne dans l'obscurité.",
+      "mare2": "Ne peut pas chasser jusqu'à 40% de Santé Mentale Moyenne à la lumière.",
+      "mare3": "N'allumera pas les lumières ou le disjoncteur.",
+      "myling1": "Émet des sons paranormaux, entendus par paramic, plus souvent que les autres fantômes.",
+      "oni1": "Peut projeter des objets à grande vitesse et sur de grandes distances.",
+      "phantom1": "Disparaîtra lorsque la photo est prise en dehors d'une chasse mais continuera à se manifester.",
+      "phantom2": "Clignote environ deux fois plus lentement que les autres fantômes pendant les chasses.",
+      "poltergeist1": "Peut lancer plusieurs objets à la fois.",
+      "revenant1": "Se déplace très rapidement alors qu'il a une ligne de mire sur le joueur pendant la chasse.",
+      "revenant2": "Se déplace très lentement pendant la chasse lorsqu'il ne cible pas un joueur.",
+      "spirit1": "Le maculage empêche une chasse pendant 180 secondes (3 minutes) au lieu de 90 secondes comme les fantômes normaux.",
+      "wraith1": "Après avoir marché dans le sel, peut émettre des bruits de pas mais ne laissera jamais d'empreintes lumineuses."
+    },
     "ghosts": {
-      "banshee": "Banshee",
-      "demon": "Démon",
-      "goryo": "Goryo",
-      "hantu": "Hantu",
-      "jinn": "Jinn",
-      "mare": "Mare",
-      "myling": "Myling",
-      "oni": "Oni",
-      "phantom": "Phantom",
-      "poltergeist": "Poltergeist",
-      "revenant": "Revenant",
-      "shade": "Shade",
-      "spirit": "Spirit",
-      "wraith": "Wraith",
-      "yokai": "Yokai",
-      "yurei": "Yurei"
+      "banshee": {
+        "id": "banshee",
+        "name": "Banshee",
+        "description": "Un Banshee est un chasseur naturel et attaquera n'importe quoi. Il est connu pour traquer ses proies une par une jusqu'à ce qu'il les tue.",
+        "evidence": ["ghostorbs", "fingerprints", "dotsprojector"],
+        "strengths": "Une Banshee ne ciblera qu'une personne à la fois.",
+        "weaknesses": "Les banshees craignent le Crucifix et seront moins agressifs à proximité."
+      },
+      "demon": {
+        "id": "demon",
+        "name": "Démon",
+        "evidence": ["ghostwriting", "freezingtemperatures", "fingerprints"],
+        "description": "Un démon est l'un des pires fantômes que vous puissiez rencontrer. Il a été connu pour attaquer sans raison.",
+        "strengths": "Demons will attack more often than any other Ghost.",
+        "weaknesses": "Asking a Demon successful questions on the Ouija Board won't lower the user's sanity."
+      },
+      "goryo": {
+        "id": "goryo",
+        "name": "Goryo",
+        "evidence": ["emflevel5", "fingerprints", "dotsprojector"],
+        "description": "Using a video camera is the only way to view a Goryo, when it passes through a DOTS projector.",
+        "strengths": "A Goryo will usually only show itself on camera if there are no people nearby.",
+        "weaknesses": "They are rarely seen far from their place of death."
+      },
+      "hantu": {
+        "id": "hantu",
+        "name": "Hantu",
+        "evidence": ["fingerprints", "ghostorbs", "freezingtemperatures"],
+        "description": "A Hantu is a rare ghost that can be found in hot climates. They are known to attack often during cold weather.",
+        "strengths": "Moves faster in colder areas.",
+        "weaknesses": "Moves slower in warmer areas."
+      },
+      "jinn": {
+        "id": "jinn",
+        "name": "Djinn",
+        "evidence": ["emflevel5", "freezingtemperatures", "fingerprints"],
+        "description": "A Jinn is a territorial ghost that will attack when threatened. It has also been known to be able to travel at significant speed.",
+        "strengths": " A Jinn will travel at a faster speed if its victim is far away.",
+        "weaknesses": "Turning off the locations power source will prevent the Jinn from using its ability."
+      },
+      "mare": {
+        "id": "mare",
+        "name": "Cauchemar",
+        "evidence": ["ghostwriting", "ghostorbs", "spiritbox"],
+        "description": "A Mare is the source of all nightmares, making it most powerful in the dark.",
+        "strengths": "A Mare will have an increased chance to attack in the dark.",
+        "weaknesses": "Turning the lights on around the Mare will lower its chance to attack."
+      },
+      "myling": {
+        "id": "myling",
+        "name": "Myling",
+        "evidence": ["emflevel5", "fingerprints", "ghostwriting"],
+        "description": "A Myling is a very vocal and active ghost. They are rumoured to be quiet when hunting their prey.",
+        "strengths": "A Myling is known to be quieter when hunting.",
+        "weaknesses": "Mylings more frequently make paranormal sounds."
+      },
+      "oni": {
+        "id": "oni",
+        "name": "Oni",
+        "evidence": ["emflevel5", "freezingtemperatures", "dotsprojector"],
+        "description": "Oni's are a cousin to the Demon and possess extreme strength. There have been rumours that they become more active around their prey.",
+        "strengths": "Oni's are more active when people are nearby and have been seen moving objects at great speed.",
+        "weaknesses": "Being more active make the Oni easier to find and identify"
+      },
+      "phantom": {
+        "id": "phantom",
+        "name": "Fantôme",
+        "evidence": ["spiritbox", "fingerprints", "dotsprojector"],
+        "description": "A Phantom is a ghost that can possess the living, most commonly summoned by a Ouija Board. It also induces fear into those around it.",
+        "strengths": "Looking at a Phantom will considerably drop your sanity.",
+        "weaknesses": "Taking a photo of the Phantom will make it temporarily disappear."
+      },
+      "poltergeist": {
+        "id": "poltergeist",
+        "name": "Poltergeist",
+        "evidence": ["ghostwriting", "spiritbox", "fingerprints"],
+        "description": "One of the most famous Ghosts, a Poltergeist, also known as a noisy ghost can manipulate objects around it to spread fear into its victims.",
+        "strengths": "A Poltergeist can throw huge amounts of objects at once.",
+        "weaknesses": "A Poltergeist is almost ineffective in an empty room."
+      },
+      "revenant": {
+        "id": "revenant",
+        "name": "Revenant",
+        "evidence": ["ghostorbs", "ghostwriting", "freezingtemperatures"],
+        "description": "A Revenant is a slow but violent ghost that will attack indiscriminately. It has been rumoured to travel at a significantly high speed when hunting.",
+        "strengths": "A Revenant will travel at a significantly faster speed when hunting a victim.",
+        "weaknesses": "Hiding from the Revenant will cause it to move very slowly."
+      },
+      "shade": {
+        "id": "shade",
+        "name": "Ombre",
+        "evidence": ["emflevel5", "freezingtemperatures", "ghostwriting"],
+        "description": "A Shade is known to be a Shy Ghost. There is evidence that a Shade will stop all paranormal activity if there are multiple people nearby.",
+        "secondaryEvidence": [],
+        "strengths": "Being shy means the Ghost will be harder to find.",
+        "weaknesses": "The Ghost will not enter hunting mode if there is multiple people nearby."
+      },
+      "spirit": {
+        "id": "spirit",
+        "name": "Esprit",
+        "evidence": ["emflevel5", "ghostwriting", "spiritbox"],
+        "description": "A Spirit is the most common Ghost you will come across however it is still very powerful and dangerous. They are usually discovered at one of their hunting grounds after an unexplained death.",
+        "strengths": "Rien.",
+        "weaknesses": "Using Smudge Sticks on a spirit will stop it attacking for a long period of time."
+      },
+      "wraith": {
+        "id": "wraith",
+        "name": "Spectre",
+        "evidence": ["emflevel5", "dotsprojector", "spiritbox"],
+        "description": "A wraith is one of the most dangerous ghosts you will find. It is also the only known Ghost that has the ability of flight and has sometimes been known to travel through walls.",
+        "strengths": "Wraiths almost never touch the ground meaning it can't be tracked by footsteps.",
+        "weaknesses": "Wraiths have a toxic reaction to Salt."
+      },
+      "yokai": {
+        "id": "yokai",
+        "name": "Yokai",
+        "evidence": ["ghostorbs", "dotsprojector", "spiritbox"],
+        "description": "A Yokai is a common type of ghost that is attracted to human voices. They can usually be found haunting family homes.",
+        "strengths": "Talking near a Yokai will anger it and increase it's chance of attacking.",
+        "weaknesses": "When hunting a Yokai can only hear voices close to it."
+      },
+      "yurei": {
+        "id": "yurei",
+        "name": "Yurei",
+        "evidence": ["freezingtemperatures", "ghostorbs", "dotsprojector"],
+        "description": "A Yurei is a Ghost that has returned to the physical world, usually for the purpose of revenge or hatred.",
+        "strengths": "Yurei's have been known to have a stronger effect on people sanity.",
+        "weaknesses": "Smudging the Yurei's room will cause it to not wander around the location for a long time."
+      }
     }
   }
 }
